<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Google Image Search</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_image_result">ImageResultActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="search">Search</string>
    <string name="enter_image_search">Enter image search</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="save">Save</string>
    <string name="advanced_search_option">Advanced search options</string>
    <string name="image_size">Image Size</string>
    <string name="color_filter">Color Filter</string>
    <string name="image_type">Image Type</string>
    <string name="site_filter">Site Filter</string>

</resources>
